--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,6 @@ body {
   font-family: Arial, sans-serif;
   padding: 1em;
   background: #2a2a2a;
-  color: white;
+  color: #2A2A2A;
   overflow-x: hidden;
 }
