--- a/src/components/range/components/fixed-range-slider/fixed-range-slider.css
+++ b/src/components/range/components/fixed-range-slider/fixed-range-slider.css
@@ -28,8 +28,11 @@
 
 .range-marker {
   position: absolute;
-  text-align: center;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transform: translateX(-30%);
 }
 
 .range-marker span {
@@ -46,13 +49,7 @@
   position: relative;
 }
 
-.marker-circle:hover {
-  width: 22px;
-  height: 22px;
-  top: -5px;
-}
-
-.range-handle {
+.fixed-range-slider-wrapper .range-handle {
   position: absolute;
   top: -12px;
   width: 22px;
@@ -61,11 +58,11 @@
   border-radius: 50%;
   cursor: grab;
   transition: transform 0.2s;
-  transform: translateX(-13%);
+  transform: translateX(-8%);
 }
 
 .range-handle:hover {
-  transform: scale(1.2);
+  transform: translate(-50%, -50%) scale(1.2);
 }
 
 .range-handle:active {
